ChangeLog of simuPOP

BUGS:
  - all known bugs have been cleared.

version 0.7.9 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
  - BUG (build): add solaris support. This OS does not have stdint.h.

version 0.7.8 - (Rev 833( Mar 2, 2007)
  - BUG: fix broken user interactive input
  - BUG: fix help feature of tkinter dialog
  - NEW: bundle boost 1.33.1 with source package
  - BUG (build): fix a SConstruct bug with MSVC environment variables
  - NEW: add other LD measurements to simuLDDecay.py
  - NEW: optionally add header to QTDT ped file
  - BUG: fix the combine parameter of SaveQTDT


version 0.7.7 - (Rev 786) Feb 1, 2007
  -NEW (build): bring scons build system on par with python setup.py
  -NEW (build): scons build now accepts options prefix, include-dirs and library-dirs
  -NEW (build): try really hard to search proper boost libraries. One usually
    does not have to specify boost inc and lib paths to build simuPOP.
  -NEW (build): prune files from source package
  -NEW: add ancestralGen to penetrance and qtrait operators
  -NEW: change pySelector and allow a second parameter gen for the fitness function
        This allows varying selection pressure.
  -CHG: individual comparison does not compare information fields
  -CHG: adjust individual representation (actually output genotype)
  -BUG: fix a bug in loading some files saved in binary module from standard modules
  -BUG: fix an affected sibpair sampler bug introduced in 0.7.5
MPI modules:
  -NEW: add hasInfoField() function
  -NEW: MPI module pass 00, 01, 06 test scripts
  -NEW: Only head node can print to cout
  

version 0.7.6 - (Rev 674) Dec 25, 2006
  -NEW: change file format for binary modules, resulting much faster save/load.
  -NEW: fix adjustGenotype (efficiency)
  -BUG: fix simulator::clone(), introduced in 0.7.5
  -NEW: disable compression under windows due to a boost bug.
  -BUG: make simuRPy works with the latest R and rpy.