@@ -1,2 +1,2 @@
 SIMUPOP_VER = "0.7.8"
-SIMUPOP_REV = "833M"
+SIMUPOP_REV = "833"
